Add project collaboration APIs
